Alignment of profile image and thumbnail alignment bug fix
Change the profile image position to the top of the website and also fix the overlapping bug in thumbnails animation.

--- a/style.css
+++ b/style.css
@@ -1160,11 +1160,13 @@ h6 {
         flex-direction: column;
         align-items: center;
         max-width: 100%;
+        order: 2;
     }
 
     .hero-right {
         justify-content: center;
         height: auto;
+        order: 1;
     }
 
     .floating-profile {
@@ -1301,6 +1303,7 @@ h6 {
         flex-direction: column;
         align-items: center;
         max-width: 100%;
+        order: 2;
     }
 
     .hero-left h4 {
@@ -1327,6 +1330,7 @@ h6 {
     .hero-right {
         justify-content: center;
         height: auto;
+        order: 1;
     }
 
     .floating-profile {
